add comments on the scripts

--- a/bootstrap/templates/base.html
+++ b/bootstrap/templates/base.html
@@ -13,6 +13,7 @@
 <!-- <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css"> -->
 
 
+<!-- **********toast link script ******** -->
 
 <link rel="stylesheet" href="{% static 'plugins/toastr/toastr.min.css' %}">
 
