alter students name to employees

--- a/bootstrap/templates/base.html
+++ b/bootstrap/templates/base.html
@@ -61,10 +61,10 @@
 <script>
 $("#selecter").change(function () {
    if (this.checked) {
-     $('input[name="students"]').prop('checked', true);
+     $('input[name="employees"]').prop('checked', true);
    }
    else {
-     $('input[name="students"]').prop('checked', false);
+     $('input[name="employees"]').prop('checked', false);
    }
  });
  </script>
