--- a/bootstrap/templates/show.html
+++ b/bootstrap/templates/show.html
@@ -13,6 +13,9 @@
 
 
         <span><a href="/addnew" class="btn btn-primary">Add New Record</a></span>  
+
+        <span><a href="/ajax/delete" class="btn btn-primary">Ajax delete</a></span>  
+
         <form method="POST" action = "/deleted"> 
          {% csrf_token %}
 
