--- a/bootstrap/templates/show.html
+++ b/bootstrap/templates/show.html
@@ -15,7 +15,7 @@
         <span><a href="/addnew" class="btn btn-primary">Add New Record</a></span>  
 
         <span><a href="/ajax/delete" class="btn btn-primary">Ajax delete</a></span> 
-        <span><a href="/modal_datatable" class="btn btn-primary">modal_dattable</a></span> 
+        <span><a href="/modal_datatable" class="btn btn-primary">modal_datatable</a></span> 
 
 
         {% block breadcrumb %}
