--- a/bootstrap/templates/base.html
+++ b/bootstrap/templates/base.html
@@ -50,6 +50,15 @@
         "aLengthMenu": [[3, 5, 10, 25, -1], [3, 5, 10, 25, "All"]],
         "iDisplayLength": 3,
          responsive: true,
+         select: false,
+         
+        //  language: {
+        //             search: "_INPUT_",
+        //             searchPlaceholder: "Search Data",
+        //         },
+
+          // "pagingType": "full_numbers",      
+
 
           } 
        );
