--- a/bootstrap/templates/show.html
+++ b/bootstrap/templates/show.html
@@ -1,62 +1,86 @@
 {% extends "base.html" %}
- 
+
 {% block title %}Employee Records{% endblock title %}
- 
+
 {% block content %}
- <div class="col-md-12">
-        <h4>Django CRUD (Create Read Update Delete) Example - Bootstrap Datatable</h4> 
+<div class="col-md-12">
+    <h4>Django CRUD (Create Read Update Delete) Example - Bootstrap Datatable</h4>
 
-        {% block toolbar %}
-        <span><a href="/responsive" class="btn btn-primary">Responsive template</a></span>  
-        {% endblock toolbar %}
-
-
-
-        <span><a href="/addnew" class="btn btn-primary">Add New Record</a></span>  
-
-        <span><a href="/ajax/delete" class="btn btn-primary">Ajax delete</a></span> 
-        <span><a href="/modal_datatable" class="btn btn-primary">modal_datatable</a></span> 
+    {% block toolbar %}
+    <span><a href="/responsive" class="btn btn-primary">Responsive template</a></span>
+    {% endblock toolbar %}
 
 
-        {% block breadcrumb %}
-        <ul class="breadcrumb" style="width: 260px; display: flex; float: right;">
+
+    <span><a href="/addnew" class="btn btn-primary">Add New Record</a></span>
+
+    <span><a href="/ajax/delete" class="btn btn-primary">Ajax delete</a></span>
+    <span><a href="/modal_datatable" class="btn btn-primary">modal_datatable</a></span>
+
+
+    {% block breadcrumb %}
+    <ul class="breadcrumb" style="width: 260px; display: flex; float: right;">
         <li><a href="#">Dashboard</a></li>
         <li><a href="#">Level 1</a></li>
-        <li class="active">Level 2</li> </ul> 
-       {% endblock breadcrumb %}
+        <li class="active">Level 2</li>
+    </ul>
+    {% endblock breadcrumb %}
 
-        <form method="POST" action = "/deleted"> 
-         {% csrf_token %}
+    <form method="POST" action="/deleted">
+        {% csrf_token %}
 
-        <br><br><input type="submit" value="Delete All Selected" class="btn btn-primary"> 
+        <br><br><input type="submit" value="Delete All Selected" class="btn btn-primary">
 
         <div class="table-responsive">
-  <table id="bootstrapdatatable" class="table table-striped table-bordered table-hover " width="100%">
-            <thead>
-                <th>ID</th>
-                <th><input type="checkbox" id="selecter" /></th>
-                <th>Employee Name</th>
-                <th>Employee Email</th>
-                <th>Employee Contact</th>
-                <th>Edit</th>
-                <th>Delete</th>
-             </thead>
-   <tbody>
+            <table id="bootstrapdatatable" class="table table-striped table-bordered table-hover " width="100%">
+                <thead>
+                    <th>ID</th>
+                    <th><input type="checkbox" id="selecter" /></th>
+                    <th>Employee Name</th>
+                    <th>Employee Email</th>
+                    <th>Employee Contact</th>
+                    <th>Edit</th>
+                    <th>Delete</th>
+                </thead>
+                <tbody>
     </form>
-   {% for employee in employees %}  
-    <tr>  
-     <td>{{ employee.id }}</td>  
-     <td><input type="checkbox" id="{{ employee.id }}" name="employees" value="{{ employee.id}}"></td>
-     <td>{{ employee.name }}</td>  
-     <td>{{ employee.email }}</td>  
-     <td>{{ employee.contact }}</td>  
-     <td><p data-placement="top" data-toggle="tooltip" title="Edit"><a href="/edit/{{ employee.id }}" class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal" data-target="#edit" ><span class="glyphicon glyphicon-pencil"></span></a></p></td>
-     <td><p data-placement="top" data-toggle="tooltip" title="Delete"><a href="/delete/{{ employee.id }}" class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" ><span class="glyphicon glyphicon-trash"></span></a></p></td>  
-    </tr>  
-   {% endfor %} 
-   </tbody>
-         
-  </table>
-        </div>
-    </div>
+    {% for employee in employees %}
+    <tr>
+        <td>{{ employee.id }}</td>
+        <td><input type="checkbox" id="{{ employee.id }}" name="employees" value="{{ employee.id}}"></td>
+        <td>{{ employee.name }}</td>
+        <td>{{ employee.email }}</td>
+        <td>{{ employee.contact }}</td>
+        <td>
+            <p data-placement="top" data-toggle="tooltip" title="Edit"><a href="/edit/{{ employee.id }}"
+                    class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal" data-target="#edit"><span
+                        class="glyphicon glyphicon-pencil"></span></a></p>
+        </td>
+        <td>
+            <p data-placement="top" data-toggle="tooltip" title="Delete"><a href="/delete/{{ employee.id }}"
+                    class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete"><span
+                        class="glyphicon glyphicon-trash"></span></a></p>
+        </td>
+    </tr>
+    {% endfor %}
+    </tbody>
+
+     <!-- *******tfoot*********** -->
+        
+     <tfoot>
+        <tr>
+            <td colspan="3"><b>Total</b></td>
+            <td>Charde Marshall</td>
+            <td>36</td>
+            <td>2008/10/16</td>
+            <td>$470,600</td>
+
+        </tr>
+    </tfoot>
+
+    <!-- *******end tfoot*********** -->
+
+    </table>
+</div>
+</div>
 {% endblock content %}
