--- a/bootstrap/templates/responsive.html
+++ b/bootstrap/templates/responsive.html
@@ -167,7 +167,7 @@
     <script src="https://cdn.datatables.net/responsive/2.2.7/js/dataTables.responsive.js"></script>
     <script>
         $('#example').DataTable({
-            responsive: true
+            responsive: true,
         });
     </script>
 </body>
