--- a/bootstrap/templates/show.html
+++ b/bootstrap/templates/show.html
@@ -16,6 +16,8 @@
 
     <span><a href="/ajax/delete" class="btn btn-primary">Ajax delete</a></span>
     <span><a href="/modal_datatable" class="btn btn-primary">modal_datatable</a></span>
+    <span><a href="/tailwind" class="btn btn-primary">Tailwind css</a></span>
+
 
 
     {% block breadcrumb %}
