--- a/bootstrap/templates/show.html
+++ b/bootstrap/templates/show.html
@@ -14,8 +14,9 @@
 
     <span><a href="/addnew" class="btn btn-primary">Add New Record</a></span>
 
-    <span><a href="/ajax/delete" class="btn btn-primary">Ajax delete</a></span>
     <span><a href="/modal_datatable" class="btn btn-primary">modal_datatable</a></span>
+    <span><a href="/flowbite" class="btn btn-primary">Flowbite</a></span>
+
     <span><a href="/tailwind" class="btn btn-primary">Tailwind css</a></span>
 
 
