Add photo model

--- a/bootstrap/templates/show.html
+++ b/bootstrap/templates/show.html
@@ -19,6 +19,8 @@
 
     <span><a href="/tailwind" class="btn btn-primary">Tailwind css</a></span>
 
+    <span><a href="/file_upload" class="btn btn-primary">Dropzone</a></span>
+
 
 
     {% block breadcrumb %}
