--- a/bootstrap/templates/upload.html
+++ b/bootstrap/templates/upload.html
@@ -26,7 +26,8 @@
     
     <form method="post" enctype="multipart/form-data"  id="dropzone-form">
         {% csrf_token %}
-        {{ form }}
+         <input type="file" multiple name="files" id="name" required/>
+        <!-- {{ form.as_p }} -->
         <div>
             <label for="id_instructions">Instructions:</label>
             <textarea name="instructions" id="id_instructions"></textarea>
