--- a/bootstrap/templates/show.html
+++ b/bootstrap/templates/show.html
@@ -19,7 +19,7 @@
 
     <span><a href="/tailwind" class="btn btn-primary">Tailwind css</a></span>
 
-    <span><a href="/file_upload" class="btn btn-primary">Dropzone</a></span>
+    <span><a href="/upload" class="btn btn-primary">Dropzone</a></span>
 
 
 
