--- a/bootstrap/templates/upload.html
+++ b/bootstrap/templates/upload.html
@@ -8,11 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-<!-- <script src="https://unpkg.com/dropzone@5/dist/min/dropzone.min.js"></script>
+<script src="https://unpkg.com/dropzone@5/dist/min/dropzone.min.js"></script>
 <link rel="stylesheet" href="https://unpkg.com/dropzone@5/dist/min/dropzone.min.css" type="text/css" />
 
     <script src="https://rawgit.com/enyo/dropzone/master/dist/dropzone.js"></script>
-    <link rel="stylesheet" href="https://rawgit.com/enyo/dropzone/master/dist/dropzone.css"> -->
+    <link rel="stylesheet" href="https://rawgit.com/enyo/dropzone/master/dist/dropzone.css"> 
     
 
 </head>
@@ -24,11 +24,11 @@
         {% csrf_token %}
         {{ form.as_p }}
 
-        <!-- <div class="dropzone" id="myDropzone">
+        <div class="dropzone" id="myDropzone">
             <div class="dz-message">
                 Drop files here or click to upload
             </div>
-        </div> -->
+        </div>
 
         <button type="submit">Submit</button>
     </form>
