Add multiple files through input

--- a/bootstrap/templates/upload.html
+++ b/bootstrap/templates/upload.html
@@ -86,7 +86,7 @@ ul.file-list li{
         <i class="glyphicon glyphicon-upload"></i>
         <span>Submit</span>
     </button>
-
+<h2 style="text-align: center;">Multiple file upload showing list of selected files</h2>
     
     <br><br>
     <div class="custom-file" style="display: flex; justify-content: center; border: dotted grey 3px;">
